--- a/water_notification/pubspec.yaml
+++ b/water_notification/pubspec.yaml
@@ -1,4 +1,4 @@
-name: punch_in_and_out
+name: water_notification
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.3.4
+  awesome_notifications: ^0.0.6+10
+  font_awesome_flutter: ^9.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
